fixed visibility stuff

--- a/src/Component/Applications/AboutApplication/AboutApplication.scss
+++ b/src/Component/Applications/AboutApplication/AboutApplication.scss
@@ -6,9 +6,3 @@
   min-height: 300px;
   min-width: 300px;
 }
-
-.hiden {
-  display: none;
-  width: 0;
-  height: 0;
-}
