--- a/src/Component/Applications/GifApplication/GifApplication.scss
+++ b/src/Component/Applications/GifApplication/GifApplication.scss
@@ -9,7 +9,8 @@
 }
 
 .hiden {
-  display: none;
-  width: 0;
-  height: 0;
+  //display: none;
+  //width: 0;
+  //height: 0;
+  visibility: hidden;
 }
